k8s/goods/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goods-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: goods
