k8s/goods/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goods-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/goods
            pathType: "Prefix"
            backend:
              service:
                name: goods-service
                port:
                  number: 80
